--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,10 @@
         android:id="@+id/viewFinder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <view class="com.example.myapplication.RectOverlay$RectOverlay"
+        android:id="@+id/rect_overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
     <Button
         android:id = "@+id/photo_btn"
         android:layout_width="wrap_content"
