--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,21 +9,23 @@
     <androidx.camera.view.PreviewView
         android:id="@+id/viewFinder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    <view class="com.example.myapplication.RectOverlay$RectOverlay"
+        android:layout_height="match_parent" />
+
+    <view
         android:id="@+id/rect_overlay"
+        class="com.example.myapplication.RectOverlay$RectOverlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
     <Button
-        android:id = "@+id/photo_btn"
+        android:id="@+id/photo_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Take photo"
         android:layout_marginBottom="50dp"
         android:elevation="2dp"
+        android:text="Take photo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
